setup/nuvolaris/registry/registry-template.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${USERNAME:-nuvolaris}-registry-api
  namespace: nuvolaris
  labels:
    app: ${USERNAME:-nuvolaris}-registry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${USERNAME:-nuvolaris}-registry-api
  template:
    metadata:
      labels:
        app: ${USERNAME:-nuvolaris}-registry-api
    spec:
      serviceAccountName: default
      containers:
        - name: ${USERNAME:-nuvolaris}-registry-api
          image: ${IMAGES_REGISTRY}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: registry
---
apiVersion: v1
kind: Service
metadata:
  name: ${USERNAME:-nuvolaris}-registry-api
  namespace: nuvolaris
spec:
  ports:
    - name: registry
      port: 5000
  selector:
    app: ${USERNAME:-nuvolaris}-registry-api
