setup/nuvolaris/registry/traefik-template.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${USERNAME:-nuvolaris}-registry-api-ingress
  namespace: nuvolaris
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/proxy-body-size: 1024m
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.idleTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.readTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.writeTimeout: "600"
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: registry.${REGISTRY_API_HOSTNAME:-localhost}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${USERNAME:-nuvolaris}-registry-api
                port:
                  number: 5000
  tls:
    - hosts:
        - registry.${REGISTRY_API_HOSTNAME:-localhost}
      secretName: registry-tls-secret
